--- a/design_systemV2/index.html
+++ b/design_systemV2/index.html
@@ -2060,9 +2060,20 @@
                   <div class="element">
                     <div class="ClipboardBoxIconOnly">
                       <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/components.svg"
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/iconFigma.svg"
                           alt="LinkedIn">
                         <p class="clickIconCopy">src="../icon/in.svg" alt="LinkedIn"</p>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="Grid-cell">
+                  <div class="element">
+                    <div class="ClipboardBoxIconOnly">
+                      <button class="ClipboardIconOnly" contenteditable="true">
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/copy.svg" alt="CodePen">
+                        <p class="clickIconCopy">src="../icon/Codepen.svg" alt="CodePen"</p>
                       </button>
                     </div>
                   </div>
@@ -2077,16 +2088,6 @@
                     </div>
                   </div>
                 </div>
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="ClipboardBoxIconOnly">
-                      <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/copy.svg" alt="CodePen">
-                        <p class="clickIconCopy">src="../icon/Codepen.svg" alt="CodePen"</p>
-                      </button>
-                    </div>
-                  </div>
-                </div>
               </div>
             </div>
 
@@ -2200,7 +2201,7 @@
                   <div class="element">
                     <div class="ClipboardBoxIconOnly">
                       <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/arrow-accordion-down.svg"
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/plus.svg"
                           alt="Arrow Down">
                         <p class="clickIconCopy">src="../icon/arrow-accordion-down.svg" alt="Arrow Down"</p>
                       </button>
@@ -2211,7 +2212,67 @@
                   <div class="element">
                     <div class="ClipboardBoxIconOnly">
                       <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/arrow-accordion-up.svg"
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/minus.svg"
+                          alt="Arrow Up">
+                        <p class="clickIconCopy">src="../icon/arrow-accordion-up.svg" alt="Arrow Up"</p>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <div class="Grid-cell">
+                  <div class="element displayNone">
+                  </div>
+                </div>
+                <div class="Grid-cell">
+                  <div class="element displayNone">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="Grid Grid--gutters Grid--cols-4 Grid--center">
+                <div class="Grid-cell">
+                  <div class="element displayNone">
+                  </div>
+                </div>
+                <div class="Grid-cell">
+                  <div class="element displayNone">
+                  </div>
+                </div>
+                <div class="Grid-cell">
+                  <div class="element displayNone">
+                  </div>
+                </div>
+                <div class="Grid-cell">
+                  <div class="element displayNone">
+
+                  </div>
+                </div>
+
+
+              </div>
+            </div>
+
+          </div>
+          <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
+            <div class="Grid-cell">
+              <div class="Grid Grid--gutters Grid--cols-4 Grid--center">
+                <div class="Grid-cell">
+                  <div class="element">
+                    <div class="ClipboardBoxIconOnly">
+                      <button class="ClipboardIconOnly" contenteditable="true">
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_research.svg"
+                          alt="Arrow Down">
+                        <p class="clickIconCopy">src="../icon/arrow-accordion-down.svg" alt="Arrow Down"</p>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <div class="Grid-cell">
+                  <div class="element">
+                    <div class="ClipboardBoxIconOnly">
+                      <button class="ClipboardIconOnly" contenteditable="true">
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/IconCompass.svg"
                           alt="Arrow Up">
                         <p class="clickIconCopy">src="../icon/arrow-accordion-up.svg" alt="Arrow Up"</p>
                       </button>
@@ -2222,7 +2283,7 @@
                   <div class="element">
                     <div class="ClipboardBoxIconOnly">
                       <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/arrow-back.svg"
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/font.svg"
                           alt="Arrow Back">
                         <p class="clickIconCopy">src="../icon/arrow-back.svg" alt="Arrow Back"</p>
                       </button>
@@ -2233,7 +2294,109 @@
                   <div class="element">
                     <div class="ClipboardBoxIconOnly">
                       <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/arrow-forward.svg"
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_book.svg"
+                          alt="Arrow Forward">
+                        <p class="clickIconCopy">src="../icon/arrow-forward.svg" alt="Arrow Forward"</p>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="Grid Grid--gutters Grid--cols-4 Grid--center">
+                <div class="Grid-cell">
+                  <div class="element">
+                    <div class="ClipboardBoxIconOnly">
+                      <button class="ClipboardIconOnly" contenteditable="true">
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_document-text.svg"
+                          alt="Arrow Forward">
+                        <p class="clickIconCopy">src="../icon/arrow-forward.svg" alt="Arrow Forward"</p>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <div class="Grid-cell">
+                  <div class="element">
+                    <div class="ClipboardBoxIconOnly">
+                      <button class="ClipboardIconOnly" contenteditable="true">
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_Testing.svg"
+                          alt="Arrow Down">
+                        <p class="clickIconCopy">src="../icon/arrow-accordion-down.svg" alt="Arrow Down"</p>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <div class="Grid-cell">
+                  <div class="element">
+                    <div class="ClipboardBoxIconOnly">
+                      <button class="ClipboardIconOnly" contenteditable="true">
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_clipboard-text.svg"
+                          alt="Arrow Back">
+                        <p class="clickIconCopy">src="../icon/arrow-back.svg" alt="Arrow Back"</p>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="Grid-cell">
+                  <div class="element">
+                    <div class="ClipboardBoxIconOnly">
+                      <button class="ClipboardIconOnly" contenteditable="true">
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_CurrentState.svg"
+                          alt="Arrow Up">
+                        <p class="clickIconCopy">src="../icon/arrow-accordion-up.svg" alt="Arrow Up"</p>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+
+
+              </div>
+            </div>
+
+          </div>
+          <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
+            <div class="Grid-cell">
+              <div class="Grid Grid--gutters Grid--cols-4 Grid--center">
+                <div class="Grid-cell">
+                  <div class="element">
+                    <div class="ClipboardBoxIconOnly">
+                      <button class="ClipboardIconOnly" contenteditable="true">
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_Category.svg"
+                          alt="Arrow Down">
+                        <p class="clickIconCopy">src="../icon/arrow-accordion-down.svg" alt="Arrow Down"</p>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <div class="Grid-cell">
+                  <div class="element">
+                    <div class="ClipboardBoxIconOnly">
+                      <button class="ClipboardIconOnly" contenteditable="true">
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_Testing.svg"
+                          alt="Arrow Up">
+                        <p class="clickIconCopy">src="../icon/arrow-accordion-up.svg" alt="Arrow Up"</p>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <div class="Grid-cell">
+                  <div class="element">
+                    <div class="ClipboardBoxIconOnly">
+                      <button class="ClipboardIconOnly" contenteditable="true">
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/iconAlert.svg"
+                          alt="Arrow Back">
+                        <p class="clickIconCopy">src="../icon/arrow-back.svg" alt="Arrow Back"</p>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <div class="Grid-cell">
+                  <div class="element">
+                    <div class="ClipboardBoxIconOnly">
+                      <button class="ClipboardIconOnly" contenteditable="true">
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/note.svg"
                           alt="Arrow Forward">
                         <p class="clickIconCopy">src="../icon/arrow-forward.svg" alt="Arrow Forward"</p>
                       </button>
@@ -2249,7 +2412,7 @@
                   <div class="element">
                     <div class="ClipboardBoxIconOnly">
                       <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/arrow-nw.svg"
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/iconCalendar.svg"
                           alt="Arrow Forward">
                         <p class="clickIconCopy">src="../icon/arrow-forward.svg" alt="Arrow Forward"</p>
                       </button>
@@ -2260,7 +2423,7 @@
                   <div class="element">
                     <div class="ClipboardBoxIconOnly">
                       <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/arrow-ne.svg"
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/layout.svg"
                           alt="Arrow Down">
                         <p class="clickIconCopy">src="../icon/arrow-accordion-down.svg" alt="Arrow Down"</p>
                       </button>
@@ -2271,7 +2434,7 @@
                   <div class="element">
                     <div class="ClipboardBoxIconOnly">
                       <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/arrow-sw.svg"
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_Iteration.svg"
                           alt="Arrow Back">
                         <p class="clickIconCopy">src="../icon/arrow-back.svg" alt="Arrow Back"</p>
                       </button>
@@ -2283,7 +2446,7 @@
                   <div class="element">
                     <div class="ClipboardBoxIconOnly">
                       <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/arrow-se.svg"
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_promotion.svg"
                           alt="Arrow Up">
                         <p class="clickIconCopy">src="../icon/arrow-accordion-up.svg" alt="Arrow Up"</p>
                       </button>
@@ -2294,7 +2457,10 @@
 
               </div>
             </div>
+
           </div>
+
+
 
           <div class="element">
             <pre>
