--- a/design_systemV2/index.html
+++ b/design_systemV2/index.html
@@ -2272,7 +2272,7 @@
                   <div class="element">
                     <div class="ClipboardBoxIconOnly">
                       <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/IconCompass.svg"
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_Redesign.svg"
                           alt="Arrow Up">
                         <p class="clickIconCopy">src="../icon/arrow-accordion-up.svg" alt="Arrow Up"</p>
                       </button>
@@ -2294,7 +2294,7 @@
                   <div class="element">
                     <div class="ClipboardBoxIconOnly">
                       <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_book.svg"
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/library.svg"
                           alt="Arrow Forward">
                         <p class="clickIconCopy">src="../icon/arrow-forward.svg" alt="Arrow Forward"</p>
                       </button>
@@ -2309,7 +2309,7 @@
                   <div class="element">
                     <div class="ClipboardBoxIconOnly">
                       <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_document-text.svg"
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_clipboard-tick.svg"
                           alt="Arrow Forward">
                         <p class="clickIconCopy">src="../icon/arrow-forward.svg" alt="Arrow Forward"</p>
                       </button>
@@ -2331,7 +2331,7 @@
                   <div class="element">
                     <div class="ClipboardBoxIconOnly">
                       <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_clipboard-text.svg"
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/Document.svg"
                           alt="Arrow Back">
                         <p class="clickIconCopy">src="../icon/arrow-back.svg" alt="Arrow Back"</p>
                       </button>
@@ -2343,7 +2343,7 @@
                   <div class="element">
                     <div class="ClipboardBoxIconOnly">
                       <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_CurrentState.svg"
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/Receipt.svg"
                           alt="Arrow Up">
                         <p class="clickIconCopy">src="../icon/arrow-accordion-up.svg" alt="Arrow Up"</p>
                       </button>
@@ -2363,7 +2363,7 @@
                   <div class="element">
                     <div class="ClipboardBoxIconOnly">
                       <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_Category.svg"
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/Category.svg"
                           alt="Arrow Down">
                         <p class="clickIconCopy">src="../icon/arrow-accordion-down.svg" alt="Arrow Down"</p>
                       </button>
@@ -2374,7 +2374,7 @@
                   <div class="element">
                     <div class="ClipboardBoxIconOnly">
                       <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_Testing.svg"
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_Final.svg"
                           alt="Arrow Up">
                         <p class="clickIconCopy">src="../icon/arrow-accordion-up.svg" alt="Arrow Up"</p>
                       </button>
@@ -2446,7 +2446,7 @@
                   <div class="element">
                     <div class="ClipboardBoxIconOnly">
                       <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_promotion.svg"
+                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/tag.svg"
                           alt="Arrow Up">
                         <p class="clickIconCopy">src="../icon/arrow-accordion-up.svg" alt="Arrow Up"</p>
                       </button>
