--- a/seer/index.html
+++ b/seer/index.html
@@ -614,7 +614,7 @@
 
                     <div class="elementSEER">
                       <div class="elementInnerSEER heightS">
-                        <img class="iconM" src="icon_Calendar.svg" alt="icon">
+                        <img class="iconM" src="iconCalendar.svg" alt="icon">
 
                         <div class="blankHXS"></div>
                         <h4> <strong> Timestamp </strong> </h4>
